add documentação das rotas delete
