# src/routes/ordersRoute.js
@@ -11,6 +11,11 @@ router.get('/user', authenticate, ordersController.getUserOrders);
 router.get('/:orderId', ordersController.getOrderDetails);
 router.post('/', authenticate, ordersController.createOrder);
 router.put('/:orderId', ordersController.updateOrder);
-router.delete('/:orderId', ordersController.deleteOrder);
+router.delete(
+  '/:orderId',
+  authenticate,
+  authorizeAdmin,
+  ordersController.deleteOrder,
+);
 
 module.exports = router;
